[tool.poetry]
name = "dungeon-and-dragons"
version = "0.1.0"
description = "A terminal game called Dungeon and Dragons"
authors = ["SoheilAlimadadi <soheilblizzard@gmail.com>"]
readme = "README.md"
packages = [{include = "dungeon_and_dragons"}]

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
